--- a/mobile/finalpr/app/src/main/res/layout/rowitem.xml
+++ b/mobile/finalpr/app/src/main/res/layout/rowitem.xml
@@ -30,6 +30,7 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:fontFamily="@font/poppinsbold"
+            android:text="dummy"
             />
 
     </RelativeLayout>
