--- a/mobile/finalpr/app/src/main/res/layout/activity_login.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_login.xml
@@ -89,10 +89,10 @@
 
         <Button
             android:id="@+id/buttonLogin"
-            style="@android:style/Theme.Material.Light.DarkActionBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:background="@drawable/login_button"
             android:text="@string/login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
