--- a/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -9,57 +9,82 @@
     app:cardUseCompatPadding="true"
     tools:context=".ProductDetails">
 
-  <RelativeLayout
+  <ScrollView
       android:layout_width="match_parent"
-      android:layout_height="350dp">
+      android:layout_height="927dp">
 
-    <ImageView
-        android:id="@+id/detailimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/detailname"
-        android:layout_marginBottom="0dp"
-        android:foregroundGravity="center"
-        android:scaleType="centerCrop"
-        android:src="@drawable/hp1" />
-
-    <TextView
-        android:id="@+id/detailname"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:fontFamily="@font/poppinsbold"
-        android:gravity="center"
-        android:text="Nama Hp"
-        android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:layout_height="wrap_content">
 
-  </RelativeLayout>
+      <ImageView
+          android:id="@+id/detailimg"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentStart="true"
+          android:layout_alignParentTop="true"
+          android:layout_alignParentEnd="true"
+          android:layout_marginTop="0dp"
+          android:layout_marginEnd="0dp"
+          android:foregroundGravity="center"
+          android:scaleType="fitCenter"
+          android:src="@drawable/loading" />
 
-  <TextView
-      android:id="@+id/textView4"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="350dp"
-      android:text="Rp. 1234568"
-      tools:layout_marginLeft="10dp" />
+      <TextView
+          android:id="@+id/detailname"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/detailimg"
+          android:layout_alignParentStart="true"
+          android:layout_alignParentEnd="true"
+          android:layout_alignParentBottom="false"
+          android:layout_marginTop="10dp"
+          android:fontFamily="@font/poppinsbold"
+          android:gravity="center|start"
+          android:text="Nama Hp"
+          android:textColor="@color/black"
+          android:textSize="25sp" />
 
-  <TextView
-      android:id="@+id/textView3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentStart="false"
-      android:layout_alignParentEnd="true"
-      android:layout_alignParentBottom="true"
-      android:fontFamily="@font/poppinsmedium"
-      android:gravity="start"
-      android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut mattis tempor felis sit amet ornare. Phasellus convallis metus at nisl elementum, at ullamcorper nulla rhoncus. Proin bibendum sollicitudin velit porttitor placerat. Maecenas nibh urna, pulvinar ut vehicula vestibulum, mollis eget dolor. Donec eleifend lectus id sollicitudin ullamcorper. Nullam odio libero, aliquam vel posuere sed, facilisis non nisl. Donec elementum elit in nisl fermentum, in ultricies enim sollicitudin."
-      android:textColor="@color/black"
-      android:textSize="15sp"
-      tools:layout_marginLeft="10dp"
-      tools:layout_marginRight="10dp"
-      tools:layout_marginTop="500dp" />
+      <TextView
+          android:id="@+id/textView2"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/detailname"
+          android:layout_marginTop="10dp"
+          android:fontFamily="@font/poppinsmedium"
+          android:text="Rp."
+          android:textSize="16sp" />
 
-</androidx.cardview.widget.CardView>
+      <TextView
+          android:id="@+id/detailprice"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/detailname"
+          android:layout_marginStart="0dp"
+          android:layout_marginTop="10dp"
+          android:layout_toEndOf="@+id/textView2"
+          android:fontFamily="@font/poppinsmedium"
+          android:text="1234568"
+          android:textSize="16sp" />
+
+      <TextView
+          android:id="@+id/detailspek"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/detailprice"
+          android:layout_alignParentStart="false"
+          android:layout_alignParentEnd="true"
+          android:layout_alignParentBottom="true"
+          android:layout_marginTop="20dp"
+          android:fontFamily="@font/poppinsmedium"
+          android:gravity="start"
+          android:text="deskripsi"
+          android:textColor="@color/black"
+          android:textSize="15sp"
+          tools:layout_marginLeft="10dp"
+          tools:layout_marginRight="10dp" />
+
+    </RelativeLayout>
+  </ScrollView>
+
+</FrameLayout>
