--- a/mobile/finalpr/app/src/main/res/layout/rowitem1.xml
+++ b/mobile/finalpr/app/src/main/res/layout/rowitem1.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="190dp"
     android:layout_height="216dp"
     android:layout_margin="12dp"
     app:cardCornerRadius="12dp"
+    android:id="@+id/cardproduct"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -12,24 +14,64 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/itemImg1"
+            android:id="@+id/prodimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="68dp"
             android:foregroundGravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/hp1" />
+            android:src="@drawable/loading" />
 
         <TextView
-            android:id="@+id/itemName1"
-            android:layout_width="wrap_content"
+            android:id="@+id/prodname"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/prodimage"
+            android:layout_alignParentBottom="false"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="-70dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:text="display"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/prodprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/prodname"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="-5dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="@color/black"
+            tools:layout_marginLeft="65dp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/prodname"
+            android:layout_alignParentStart="false"
+            android:layout_marginTop="-5dp"
+            android:layout_marginEnd="-60dp"
+            android:layout_toStartOf="@+id/prodprice"
+            android:text="Rp." />
+
+        <TextView
+            android:id="@+id/prodspek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
