--- a/mobile/finalpr/app/src/main/res/layout/fragment_cart.xml
+++ b/mobile/finalpr/app/src/main/res/layout/fragment_cart.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragment.CartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/cf" />
+        android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
