--- a/mobile/finalpr/app/src/main/res/layout/fragment_profile.xml
+++ b/mobile/finalpr/app/src/main/res/layout/fragment_profile.xml
@@ -5,73 +5,41 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ProfileFragment">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/p_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:minHeight="48dp"
-        android:text="E-mail" />
-
-    <EditText
-        android:id="@+id/p_notelp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:minHeight="48dp"
-        android:text="No Telepon" />
-
-    <EditText
-        android:id="@+id/p_alamat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:minHeight="48dp"
-        android:text="Alamat" />
-
-    <EditText
-        android:id="@+id/p_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:minHeight="48dp"
-        android:text="Username" />
-
-    <EditText
-        android:id="@+id/p_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:minHeight="48dp"
-        android:text="Password" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnUpdate"
+        <TextView
+            android:id="@+id/p_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight=".5"
-            android:text="Update Data" />
+            android:layout_margin="10dp"
+            android:fontFamily="@font/poppinsmedium"
+            android:gravity="center"
+            android:minHeight="48dp"
+            android:text="Username"
+            android:textColor="@color/black"
+            android:textSize="25sp" />
 
-        <Button
-            android:id="@+id/btnChange"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight=".5"
-            android:text="Change Password" />
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="200dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight=".5"
+                android:text="Logout" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
 </RelativeLayout>
