--- a/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
@@ -7,7 +7,7 @@
     android:layout_margin="12dp"
     app:cardCornerRadius="12dp"
     app:cardUseCompatPadding="true"
-    tools:context=".ProductDetails">
+    tools:context=".product.ProductDetails">
 
   <ScrollView
       android:layout_width="match_parent"
