--- a/mobile/finalpr/app/src/main/res/layout/activity_login.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_login.xml
@@ -7,20 +7,28 @@
     tools:context=".logres.LoginActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
-        android:text="@string/login"
+        android:text="Login"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:targetApi="jelly_bean" />
+         />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
