--- a/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_product_details.xml
@@ -85,7 +85,7 @@
           tools:layout_marginRight="10dp" />
 
       <Button
-          android:id="@+id/button"
+          android:id="@+id/btnproceed"
           android:layout_width="176dp"
           android:layout_height="48dp"
           android:layout_below="@+id/detailspek"
@@ -94,17 +94,17 @@
           android:layout_marginTop="150dp"
           android:layout_marginRight="20dp"
           android:layout_marginBottom="0dp"
-          android:text="Checkout" />
+          android:text="Proceed" />
 
       <Button
-          android:id="@+id/button2"
-          android:layout_width="48dp"
-          android:layout_height="48dp"
+          android:id="@+id/btndecrement"
+          android:layout_width="40dp"
+          android:layout_height="40dp"
           android:layout_below="@+id/detailspek"
           android:layout_alignParentStart="true"
           android:layout_marginLeft="20dp"
-          android:layout_marginTop="155dp"
-          android:background="@drawable/ic_baseline_remove_24" />
+          android:layout_marginTop="158dp"
+          android:text="-" />
 
       <ImageView
           android:id="@+id/imageView"
@@ -113,30 +113,30 @@
           android:layout_below="@+id/detailspek"
           android:layout_marginStart="0dp"
           android:layout_marginTop="155dp"
-          android:layout_toEndOf="@+id/button2"
+          android:layout_toEndOf="@+id/btndecrement"
           app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />
 
       <Button
-          android:id="@+id/button3"
-          android:layout_width="48dp"
-          android:layout_height="48dp"
+          android:id="@+id/btnincrement"
+          android:layout_width="40dp"
+          android:layout_height="40dp"
           android:layout_below="@+id/detailspek"
           android:layout_marginStart="0dp"
-          android:layout_marginTop="155dp"
+          android:layout_marginTop="158dp"
           android:layout_toEndOf="@+id/imageView"
-          android:background="@drawable/ic_baseline_add_24" />
+          android:text="+" />
 
       <TextView
-          android:id="@+id/textView3"
+          android:id="@+id/qtyview"
           android:layout_width="43dp"
           android:layout_height="31dp"
           android:layout_below="@+id/detailspek"
           android:layout_marginStart="2dp"
           android:layout_marginTop="161dp"
-          android:layout_toEndOf="@+id/button2"
+          android:layout_toEndOf="@+id/btndecrement"
           android:fontFamily="@font/poppinsmedium"
           android:gravity="center"
-          android:text="700"
+          android:text="0"
           android:textColor="@color/black" />
 
     </RelativeLayout>
