--- a/mobile/finalpr/app/src/main/res/layout/activity_sign_up.xml
+++ b/mobile/finalpr/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,7 @@
     tools:context=".logres.SignUpActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txv1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -29,7 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/txv1"
         app:layout_constraintVertical_bias="1.0">
 
         <com.google.android.material.textfield.TextInputLayout
