--- a/mobile/finalpr/app/src/main/res/layout/fragment_home.xml
+++ b/mobile/finalpr/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/poppinsbold"
-            android:text="Produk Terbaru"
+            android:text="Produk Kami"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:textStyle="bold"></TextView>
@@ -49,7 +49,7 @@
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-149dp"
+            android:layout_marginLeft="-125dp"
             android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/idproduk">
 
