--- a/mobile/finalpr/app/src/main/res/layout/fragment_profile.xml
+++ b/mobile/finalpr/app/src/main/res/layout/fragment_profile.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.ProfileFragment">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/download"
+        app:civ_border_color="#FF000000"
+        android:layout_centerInParent="true"
+        app:civ_border_width="2dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="300dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/p_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="20dp"
             android:fontFamily="@font/poppinsmedium"
             android:gravity="center"
-            android:minHeight="48dp"
+            android:minHeight="55dp"
             android:text="Username"
             android:textColor="@color/black"
             android:textSize="25sp" />
@@ -40,6 +50,7 @@
                 android:text="Logout" />
 
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
